# BlueLatch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
assets/screenshots/: README.md
packaging/appimage/: AppRun  bluelatch  bluelatch-agent  io.github.UdayaSri.BlueLatch.appdata.xml
packaging/debian/: bluelatch.install  changelog  control  copyright  rules
packaging/desktop/: io.github.UdayaSri.BlueLatch.desktop
packaging/systemd/: bluelatch-agent.service
scripts/: build_appimage.sh  build_deb.sh  check.sh  check_release_metadata.sh  collect_release_assets.sh  publish_apt_repo.sh  render_release_notes.sh
src/bluelatch/: agent.py  app.py  main.py  models.py  runtime.py  version.py
src/bluelatch/bluetooth/: __init__.py  bluez.py  models.py  reconnect.py
src/bluelatch/config/: __init__.py  manager.py  models.py
src/bluelatch/presence/: __init__.py  estimator.py  models.py  state_machine.py
src/bluelatch/session/: __init__.py  lock.py  monitor.py
src/bluelatch/startup/: __init__.py  autostart.py  systemd.py
src/bluelatch/ui/: __init__.py  about.py  application.py  devices.py  logs.py  onboarding.py  settings.py  status.py  updates.py  window.py
tests/: test_main.py
tests/bluetooth/: test_device_display_name.py  test_reconnect.py
tests/config/: test_manager.py
tests/integration/: test_manual_override_flow.py
tests/presence/: test_estimator.py  test_state_machine.py
tests/session/: test_lock_policy.py
tests/updates/: test_service.py
(+10 files in other folders)
