[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluelatch"
dynamic = ["version"]
description = "Linux Bluetooth proximity lock for Ubuntu GNOME"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Udaya Sri" },
]
keywords = ["bluetooth", "desktop", "gnome", "linux", "security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.1.1",
]
gtk = [
  "PyGObject>=3.48",
]

[project.scripts]
bluelatch = "bluelatch.main:main"
bluelatch-agent = "bluelatch.main:agent_main"

[project.urls]
Homepage = "https://github.com/UdayaSri0/BlueLatch"
Repository = "https://github.com/UdayaSri0/BlueLatch"
Issues = "https://github.com/UdayaSri0/BlueLatch/issues"

[tool.setuptools.dynamic]
version = { attr = "bluelatch.version.__version__" }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]
